# banksys

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
models/: .gitkeep
src/: __init__.py  common.py  config.py  model.py
src/data_explorer/: __init__.py  app.py  insights.py
src/model_training/: __init__.py  pipeline.py
src/prediction_service/: __init__.py  schemas.py  service.py
standards/: 00-project-context.md  01-requirements.md  04-git-workflow.md  05-cicd-standards.md  06-ai-collab-protocol.md  PROGRESS.md  README.md
tests/: conftest.py  test_common.py  test_insights.py  test_model.py  test_model_cli.py  test_service.py
